// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getDefaultConfiguration returns the default Webpack configuration for the given CLI config 1`] = `
{
  "devtool": false,
  "entry": "/foo/bar/src/index.js",
  "infrastructureLogging": {
    "level": "none",
  },
  "mode": "production",
  "module": {
    "rules": [
      {
        "exclude": /node_modules/u,
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|ts\\)\\$/u,
        "use": {
          "loader": "/foo/bar/node_modules/swc-loader/index.js",
          "options": {
            "env": {
              "targets": "chrome >= 90, firefox >= 91",
            },
            "jsc": {
              "parser": {
                "syntax": "typescript",
              },
            },
            "module": {
              "type": "es6",
            },
            "sourceMaps": false,
            "sync": false,
          },
        },
      },
      {
        "resolve": {
          "fullySpecified": false,
        },
        "test": /\\\\\\.m\\?js/u,
      },
      false,
    ],
  },
  "optimization": {
    "minimize": true,
    "minimizer": [
      TerserPlugin {
        "options": {
          "exclude": undefined,
          "extractComments": true,
          "include": undefined,
          "minimizer": {
            "implementation": [Function],
            "options": {},
          },
          "parallel": true,
          "test": /\\\\\\.\\[cm\\]\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
        },
      },
    ],
  },
  "output": {
    "chunkFormat": "commonjs",
    "clean": false,
    "filename": "bundle.js",
    "library": {
      "type": "commonjs",
    },
    "path": "/foo/bar/dist",
    "publicPath": "/",
  },
  "performance": {
    "hints": false,
  },
  "plugins": [
    SnapsWebpackPlugin {
      "options": {
        "eval": true,
        "manifestPath": "/foo/bar/snap.manifest.json",
        "writeManifest": true,
      },
    },
    SnapsStatsPlugin {
      "options": {
        "verbose": false,
      },
    },
    DefinePlugin {
      "definitions": {
        "process.env.DEBUG": ""false"",
        "process.env.NODE_DEBUG": ""false"",
        "process.env.NODE_ENV": ""production"",
      },
    },
    ProgressPlugin {
      "dependenciesCount": 10000,
      "handler": [Function],
      "modulesCount": 5000,
      "percentBy": undefined,
      "profile": false,
      "showActiveModules": false,
      "showDependencies": true,
      "showEntries": true,
      "showModules": true,
    },
    SnapsBundleWarningsPlugin {
      "options": {
        "buffer": true,
        "builtInResolver": SnapsBuiltInResolver {
          "options": {
            "ignore": [],
          },
          "unresolvedModules": Set {},
        },
        "builtIns": true,
      },
    },
  ],
  "resolve": {
    "extensions": [
      ".js",
      ".mjs",
      ".cjs",
      ".ts",
    ],
    "fallback": {
      "buffer": false,
      "fs": false,
      "path": false,
    },
    "plugins": [
      SnapsBuiltInResolver {
        "options": {
          "ignore": [],
        },
        "unresolvedModules": Set {},
      },
    ],
  },
  "stats": "none",
  "target": "browserslist:/foo/bar/.browserslistrc",
}
`;

exports[`getDefaultConfiguration returns the default Webpack configuration for the given CLI config 2`] = `
{
  "devtool": false,
  "entry": "/foo/bar/src/index.ts",
  "infrastructureLogging": {
    "level": "none",
  },
  "mode": "production",
  "module": {
    "rules": [
      {
        "exclude": /node_modules/u,
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|ts\\)\\$/u,
        "use": {
          "loader": "/foo/bar/node_modules/swc-loader/index.js",
          "options": {
            "env": {
              "targets": "chrome >= 90, firefox >= 91",
            },
            "jsc": {
              "parser": {
                "syntax": "typescript",
              },
            },
            "module": {
              "type": "es6",
            },
            "sourceMaps": false,
            "sync": false,
          },
        },
      },
      {
        "resolve": {
          "fullySpecified": false,
        },
        "test": /\\\\\\.m\\?js/u,
      },
      false,
    ],
  },
  "optimization": {
    "minimize": true,
    "minimizer": [
      TerserPlugin {
        "options": {
          "exclude": undefined,
          "extractComments": true,
          "include": undefined,
          "minimizer": {
            "implementation": [Function],
            "options": {},
          },
          "parallel": true,
          "test": /\\\\\\.\\[cm\\]\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
        },
      },
    ],
  },
  "output": {
    "chunkFormat": "commonjs",
    "clean": false,
    "filename": "bundle.js",
    "library": {
      "type": "commonjs",
    },
    "path": "/foo/bar/dist",
    "publicPath": "/",
  },
  "performance": {
    "hints": false,
  },
  "plugins": [
    SnapsWebpackPlugin {
      "options": {
        "eval": true,
        "manifestPath": "/foo/bar/snap.manifest.json",
        "writeManifest": true,
      },
    },
    SnapsStatsPlugin {
      "options": {
        "verbose": true,
      },
    },
    DefinePlugin {
      "definitions": {
        "process.env.DEBUG": ""false"",
        "process.env.NODE_DEBUG": ""false"",
        "process.env.NODE_ENV": ""production"",
      },
    },
    ProgressPlugin {
      "dependenciesCount": 10000,
      "handler": [Function],
      "modulesCount": 5000,
      "percentBy": undefined,
      "profile": false,
      "showActiveModules": false,
      "showDependencies": true,
      "showEntries": true,
      "showModules": true,
    },
    SnapsBundleWarningsPlugin {
      "options": {
        "buffer": true,
        "builtInResolver": SnapsBuiltInResolver {
          "options": {
            "ignore": [],
          },
          "unresolvedModules": Set {},
        },
        "builtIns": true,
      },
    },
  ],
  "resolve": {
    "extensions": [
      ".js",
      ".mjs",
      ".cjs",
      ".ts",
    ],
    "fallback": {
      "buffer": false,
      "fs": false,
      "path": false,
    },
    "plugins": [
      SnapsBuiltInResolver {
        "options": {
          "ignore": [],
        },
        "unresolvedModules": Set {},
      },
    ],
  },
  "stats": "none",
  "target": "browserslist:/foo/bar/.browserslistrc",
}
`;

exports[`getDefaultConfiguration returns the default Webpack configuration for the given CLI config 3`] = `
{
  "devtool": "inline-source-map",
  "entry": "/foo/bar/src/index.ts",
  "infrastructureLogging": {
    "level": "none",
  },
  "mode": "production",
  "module": {
    "rules": [
      {
        "exclude": /node_modules/u,
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|ts\\)\\$/u,
        "use": {
          "loader": "/foo/bar/node_modules/swc-loader/index.js",
          "options": {
            "env": {
              "targets": "chrome >= 90, firefox >= 91",
            },
            "jsc": {
              "parser": {
                "syntax": "typescript",
              },
            },
            "module": {
              "type": "es6",
            },
            "sourceMaps": true,
            "sync": false,
          },
        },
      },
      {
        "resolve": {
          "fullySpecified": false,
        },
        "test": /\\\\\\.m\\?js/u,
      },
      false,
    ],
  },
  "optimization": {
    "minimize": true,
    "minimizer": [
      TerserPlugin {
        "options": {
          "exclude": undefined,
          "extractComments": true,
          "include": undefined,
          "minimizer": {
            "implementation": [Function],
            "options": {},
          },
          "parallel": true,
          "test": /\\\\\\.\\[cm\\]\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
        },
      },
    ],
  },
  "output": {
    "chunkFormat": "commonjs",
    "clean": false,
    "filename": "bundle.js",
    "library": {
      "type": "commonjs",
    },
    "path": "/foo/bar/dist",
    "publicPath": "/",
  },
  "performance": {
    "hints": false,
  },
  "plugins": [
    SnapsWebpackPlugin {
      "options": {
        "eval": true,
        "manifestPath": "/foo/bar/snap.manifest.json",
        "writeManifest": true,
      },
    },
    SnapsStatsPlugin {
      "options": {
        "verbose": false,
      },
    },
    DefinePlugin {
      "definitions": {
        "process.env.DEBUG": ""false"",
        "process.env.NODE_DEBUG": ""false"",
        "process.env.NODE_ENV": ""production"",
      },
    },
    ProgressPlugin {
      "dependenciesCount": 10000,
      "handler": [Function],
      "modulesCount": 5000,
      "percentBy": undefined,
      "profile": false,
      "showActiveModules": false,
      "showDependencies": true,
      "showEntries": true,
      "showModules": true,
    },
    SnapsBundleWarningsPlugin {
      "options": {
        "buffer": false,
        "builtInResolver": SnapsBuiltInResolver {
          "options": {
            "ignore": [],
          },
          "unresolvedModules": Set {},
        },
        "builtIns": true,
      },
    },
  ],
  "resolve": {
    "extensions": [
      ".js",
      ".mjs",
      ".cjs",
      ".ts",
    ],
    "fallback": {
      "buffer": false,
      "fs": false,
      "path": false,
    },
    "plugins": [
      SnapsBuiltInResolver {
        "options": {
          "ignore": [],
        },
        "unresolvedModules": Set {},
      },
    ],
  },
  "stats": "none",
  "target": "browserslist:/foo/bar/.browserslistrc",
}
`;

exports[`getDefaultConfiguration returns the default Webpack configuration for the given CLI config 4`] = `
{
  "devtool": "source-map",
  "entry": "/foo/bar/src/index.ts",
  "infrastructureLogging": {
    "level": "none",
  },
  "mode": "production",
  "module": {
    "rules": [
      {
        "exclude": /node_modules/u,
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|ts\\)\\$/u,
        "use": {
          "loader": "/foo/bar/node_modules/swc-loader/index.js",
          "options": {
            "env": {
              "targets": "chrome >= 90, firefox >= 91",
            },
            "jsc": {
              "parser": {
                "syntax": "typescript",
              },
            },
            "module": {
              "type": "es6",
            },
            "sourceMaps": true,
            "sync": false,
          },
        },
      },
      {
        "resolve": {
          "fullySpecified": false,
        },
        "test": /\\\\\\.m\\?js/u,
      },
      false,
    ],
  },
  "optimization": {
    "minimize": true,
    "minimizer": [
      TerserPlugin {
        "options": {
          "exclude": undefined,
          "extractComments": true,
          "include": undefined,
          "minimizer": {
            "implementation": [Function],
            "options": {},
          },
          "parallel": true,
          "test": /\\\\\\.\\[cm\\]\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
        },
      },
    ],
  },
  "output": {
    "chunkFormat": "commonjs",
    "clean": false,
    "filename": "bundle.js",
    "library": {
      "type": "commonjs",
    },
    "path": "/foo/bar/dist",
    "publicPath": "/",
  },
  "performance": {
    "hints": false,
  },
  "plugins": [
    SnapsWebpackPlugin {
      "options": {
        "eval": true,
        "manifestPath": "/foo/bar/snap.manifest.json",
        "writeManifest": true,
      },
    },
    SnapsStatsPlugin {
      "options": {
        "verbose": false,
      },
    },
    DefinePlugin {
      "definitions": {
        "process.env.DEBUG": ""false"",
        "process.env.FOO": ""bar"",
        "process.env.NODE_DEBUG": ""false"",
        "process.env.NODE_ENV": ""production"",
      },
    },
    ProgressPlugin {
      "dependenciesCount": 10000,
      "handler": [Function],
      "modulesCount": 5000,
      "percentBy": undefined,
      "profile": false,
      "showActiveModules": false,
      "showDependencies": true,
      "showEntries": true,
      "showModules": true,
    },
    SnapsBundleWarningsPlugin {
      "options": {
        "buffer": false,
        "builtInResolver": false,
        "builtIns": false,
      },
    },
  ],
  "resolve": {
    "extensions": [
      ".js",
      ".mjs",
      ".cjs",
      ".ts",
    ],
    "fallback": {
      "buffer": false,
      "fs": false,
      "path": false,
    },
    "plugins": [
      false,
    ],
  },
  "stats": "none",
  "target": "browserslist:/foo/bar/.browserslistrc",
}
`;

exports[`getDefaultConfiguration returns the default Webpack configuration for the given CLI config 5`] = `
{
  "devtool": false,
  "entry": "/foo/bar/src/index.js",
  "infrastructureLogging": {
    "level": "none",
  },
  "mode": "production",
  "module": {
    "rules": [
      {
        "exclude": /node_modules/u,
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|ts\\)\\$/u,
        "use": {
          "loader": "/foo/bar/node_modules/swc-loader/index.js",
          "options": {
            "env": {
              "targets": "chrome >= 90, firefox >= 91",
            },
            "jsc": {
              "parser": {
                "syntax": "typescript",
              },
            },
            "module": {
              "type": "es6",
            },
            "sourceMaps": false,
            "sync": false,
          },
        },
      },
      {
        "resolve": {
          "fullySpecified": false,
        },
        "test": /\\\\\\.m\\?js/u,
      },
      {
        "test": /\\\\\\.wasm\\$/u,
        "use": {
          "loader": "/foo/bar/src/webpack/loaders/function.ts",
          "options": {
            "fn": [Function],
          },
        },
      },
    ],
  },
  "optimization": {
    "minimize": true,
    "minimizer": [
      TerserPlugin {
        "options": {
          "exclude": undefined,
          "extractComments": true,
          "include": undefined,
          "minimizer": {
            "implementation": [Function],
            "options": {},
          },
          "parallel": true,
          "test": /\\\\\\.\\[cm\\]\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
        },
      },
    ],
  },
  "output": {
    "chunkFormat": "commonjs",
    "clean": false,
    "filename": "bundle.js",
    "library": {
      "type": "commonjs",
    },
    "path": "/foo/bar/dist",
    "publicPath": "/",
  },
  "performance": {
    "hints": false,
  },
  "plugins": [
    SnapsWebpackPlugin {
      "options": {
        "eval": true,
        "manifestPath": "/foo/bar/snap.manifest.json",
        "writeManifest": true,
      },
    },
    SnapsStatsPlugin {
      "options": {
        "verbose": false,
      },
    },
    DefinePlugin {
      "definitions": {
        "process.env.DEBUG": ""false"",
        "process.env.NODE_DEBUG": ""false"",
        "process.env.NODE_ENV": ""production"",
      },
    },
    ProgressPlugin {
      "dependenciesCount": 10000,
      "handler": [Function],
      "modulesCount": 5000,
      "percentBy": undefined,
      "profile": false,
      "showActiveModules": false,
      "showDependencies": true,
      "showEntries": true,
      "showModules": true,
    },
    SnapsBundleWarningsPlugin {
      "options": {
        "buffer": true,
        "builtInResolver": SnapsBuiltInResolver {
          "options": {
            "ignore": [],
          },
          "unresolvedModules": Set {},
        },
        "builtIns": true,
      },
    },
  ],
  "resolve": {
    "extensions": [
      ".js",
      ".mjs",
      ".cjs",
      ".ts",
    ],
    "fallback": {
      "buffer": false,
      "fs": false,
      "path": false,
    },
    "plugins": [
      SnapsBuiltInResolver {
        "options": {
          "ignore": [],
        },
        "unresolvedModules": Set {},
      },
    ],
  },
  "stats": "none",
  "target": "browserslist:/foo/bar/.browserslistrc",
}
`;

exports[`getDefaultConfiguration returns the default Webpack configuration for the given CLI config 6`] = `
{
  "devtool": false,
  "entry": "/foo/bar/src/index.js",
  "infrastructureLogging": {
    "level": "none",
  },
  "mode": "production",
  "module": {
    "rules": [
      {
        "exclude": /node_modules/u,
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|ts\\)\\$/u,
        "use": {
          "loader": "/foo/bar/node_modules/swc-loader/index.js",
          "options": {
            "env": {
              "targets": "chrome >= 90, firefox >= 91",
            },
            "jsc": {
              "parser": {
                "syntax": "typescript",
              },
            },
            "module": {
              "type": "es6",
            },
            "sourceMaps": false,
            "sync": false,
          },
        },
      },
      {
        "resolve": {
          "fullySpecified": false,
        },
        "test": /\\\\\\.m\\?js/u,
      },
      false,
    ],
  },
  "optimization": {
    "minimize": false,
    "minimizer": [
      TerserPlugin {
        "options": {
          "exclude": undefined,
          "extractComments": true,
          "include": undefined,
          "minimizer": {
            "implementation": [Function],
            "options": {},
          },
          "parallel": true,
          "test": /\\\\\\.\\[cm\\]\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
        },
      },
    ],
  },
  "output": {
    "chunkFormat": "commonjs",
    "clean": false,
    "filename": "bundle.js",
    "library": {
      "type": "commonjs",
    },
    "path": "/foo/bar/dist",
    "publicPath": "/",
  },
  "performance": {
    "hints": false,
  },
  "plugins": [
    SnapsWebpackPlugin {
      "options": {
        "eval": true,
        "manifestPath": "/foo/bar/snap.manifest.json",
        "writeManifest": true,
      },
    },
    SnapsStatsPlugin {
      "options": {
        "verbose": false,
      },
    },
    DefinePlugin {
      "definitions": {
        "process.env.DEBUG": ""false"",
        "process.env.NODE_DEBUG": ""false"",
        "process.env.NODE_ENV": ""production"",
      },
    },
    ProgressPlugin {
      "dependenciesCount": 10000,
      "handler": [Function],
      "modulesCount": 5000,
      "percentBy": undefined,
      "profile": false,
      "showActiveModules": false,
      "showDependencies": true,
      "showEntries": true,
      "showModules": true,
    },
    SnapsBundleWarningsPlugin {
      "options": {
        "buffer": true,
        "builtInResolver": SnapsBuiltInResolver {
          "options": {
            "ignore": [],
          },
          "unresolvedModules": Set {},
        },
        "builtIns": true,
      },
    },
  ],
  "resolve": {
    "extensions": [
      ".js",
      ".mjs",
      ".cjs",
      ".ts",
    ],
    "fallback": {
      "buffer": false,
      "fs": false,
      "path": false,
    },
    "plugins": [
      SnapsBuiltInResolver {
        "options": {
          "ignore": [],
        },
        "unresolvedModules": Set {},
      },
    ],
  },
  "stats": "none",
  "target": "browserslist:/foo/bar/.browserslistrc",
}
`;

exports[`getDefaultConfiguration returns the default Webpack configuration for the given CLI config 7`] = `
{
  "devtool": false,
  "entry": "/foo/bar/src/index.js",
  "infrastructureLogging": {
    "level": "none",
  },
  "mode": "production",
  "module": {
    "rules": [
      {
        "exclude": /node_modules/u,
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|ts\\)\\$/u,
        "use": {
          "loader": "/foo/bar/node_modules/swc-loader/index.js",
          "options": {
            "env": {
              "targets": "chrome >= 90, firefox >= 91",
            },
            "jsc": {
              "parser": {
                "syntax": "typescript",
              },
            },
            "module": {
              "type": "es6",
            },
            "sourceMaps": false,
            "sync": false,
          },
        },
      },
      {
        "resolve": {
          "fullySpecified": false,
        },
        "test": /\\\\\\.m\\?js/u,
      },
      false,
    ],
  },
  "optimization": {
    "minimize": false,
    "minimizer": [
      TerserPlugin {
        "options": {
          "exclude": undefined,
          "extractComments": true,
          "include": undefined,
          "minimizer": {
            "implementation": [Function],
            "options": {},
          },
          "parallel": true,
          "test": /\\\\\\.\\[cm\\]\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
        },
      },
    ],
  },
  "output": {
    "chunkFormat": "commonjs",
    "clean": false,
    "filename": "bundle.js",
    "library": {
      "type": "commonjs",
    },
    "path": "/foo/bar/dist",
    "publicPath": "/",
  },
  "performance": {
    "hints": false,
  },
  "plugins": [
    SnapsWebpackPlugin {
      "options": {
        "eval": true,
        "manifestPath": "/foo/bar/snap.manifest.json",
        "writeManifest": true,
      },
    },
    SnapsStatsPlugin {
      "options": {
        "verbose": false,
      },
    },
    DefinePlugin {
      "definitions": {
        "process.env.DEBUG": ""false"",
        "process.env.NODE_DEBUG": ""false"",
        "process.env.NODE_ENV": ""production"",
      },
    },
    ProgressPlugin {
      "dependenciesCount": 10000,
      "handler": [Function],
      "modulesCount": 5000,
      "percentBy": undefined,
      "profile": false,
      "showActiveModules": false,
      "showDependencies": true,
      "showEntries": true,
      "showModules": true,
    },
    SnapsBundleWarningsPlugin {
      "options": {
        "buffer": true,
        "builtInResolver": SnapsBuiltInResolver {
          "options": {
            "ignore": [],
          },
          "unresolvedModules": Set {},
        },
        "builtIns": true,
      },
    },
  ],
  "resolve": {
    "extensions": [
      ".js",
      ".mjs",
      ".cjs",
      ".ts",
    ],
    "fallback": {
      "buffer": false,
      "fs": false,
      "path": false,
    },
    "plugins": [
      SnapsBuiltInResolver {
        "options": {
          "ignore": [],
        },
        "unresolvedModules": Set {},
      },
    ],
  },
  "stats": "none",
  "target": "browserslist:/foo/bar/.browserslistrc",
}
`;

exports[`getDefaultConfiguration returns the default Webpack configuration for the given CLI config 8`] = `
{
  "devtool": false,
  "entry": "/foo/bar/src/index.js",
  "infrastructureLogging": {
    "level": "none",
  },
  "mode": "production",
  "module": {
    "rules": [
      {
        "exclude": /node_modules/u,
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|ts\\)\\$/u,
        "use": {
          "loader": "/foo/bar/node_modules/swc-loader/index.js",
          "options": {
            "env": {
              "targets": "chrome >= 90, firefox >= 91",
            },
            "jsc": {
              "parser": {
                "syntax": "typescript",
              },
            },
            "module": {
              "type": "es6",
            },
            "sourceMaps": false,
            "sync": false,
          },
        },
      },
      {
        "resolve": {
          "fullySpecified": false,
        },
        "test": /\\\\\\.m\\?js/u,
      },
      false,
    ],
  },
  "optimization": {
    "minimize": false,
    "minimizer": [
      TerserPlugin {
        "options": {
          "exclude": undefined,
          "extractComments": true,
          "include": undefined,
          "minimizer": {
            "implementation": [Function],
            "options": {},
          },
          "parallel": true,
          "test": /\\\\\\.\\[cm\\]\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
        },
      },
    ],
  },
  "output": {
    "chunkFormat": "commonjs",
    "clean": false,
    "filename": "bundle.js",
    "library": {
      "type": "commonjs",
    },
    "path": "/foo/bar/dist",
    "publicPath": "/",
  },
  "performance": {
    "hints": false,
  },
  "plugins": [
    SnapsWebpackPlugin {
      "options": {
        "eval": true,
        "manifestPath": "/foo/bar/snap.manifest.json",
        "writeManifest": true,
      },
    },
    SnapsStatsPlugin {
      "options": {
        "verbose": false,
      },
    },
    DefinePlugin {
      "definitions": {
        "process.env.DEBUG": ""false"",
        "process.env.NODE_DEBUG": ""false"",
        "process.env.NODE_ENV": ""production"",
      },
    },
    ProgressPlugin {
      "dependenciesCount": 10000,
      "handler": [Function],
      "modulesCount": 5000,
      "percentBy": undefined,
      "profile": false,
      "showActiveModules": false,
      "showDependencies": true,
      "showEntries": true,
      "showModules": true,
    },
    SnapsBundleWarningsPlugin {
      "options": {
        "buffer": true,
        "builtInResolver": SnapsBuiltInResolver {
          "options": {
            "ignore": [],
          },
          "unresolvedModules": Set {},
        },
        "builtIns": true,
      },
    },
    ProvidePlugin {
      "definitions": {
        "Buffer": [
          "buffer",
          "Buffer",
        ],
      },
    },
  ],
  "resolve": {
    "extensions": [
      ".js",
      ".mjs",
      ".cjs",
      ".ts",
    ],
    "fallback": {
      "buffer": "/foo/bar/index.js",
      "fs": false,
      "path": "/foo/bar/index.js",
    },
    "plugins": [
      SnapsBuiltInResolver {
        "options": {
          "ignore": [],
        },
        "unresolvedModules": Set {},
      },
    ],
  },
  "stats": "none",
  "target": "browserslist:/foo/bar/.browserslistrc",
}
`;

exports[`getDefaultConfiguration returns the default Webpack configuration for the given CLI config 9`] = `
{
  "devtool": false,
  "entry": "/foo/bar/src/index.js",
  "infrastructureLogging": {
    "level": "none",
  },
  "mode": "production",
  "module": {
    "rules": [
      {
        "exclude": /node_modules/u,
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|ts\\)\\$/u,
        "use": {
          "loader": "/foo/bar/node_modules/swc-loader/index.js",
          "options": {
            "env": {
              "targets": "chrome >= 90, firefox >= 91",
            },
            "jsc": {
              "parser": {
                "syntax": "typescript",
              },
            },
            "module": {
              "type": "es6",
            },
            "sourceMaps": false,
            "sync": false,
          },
        },
      },
      {
        "resolve": {
          "fullySpecified": false,
        },
        "test": /\\\\\\.m\\?js/u,
      },
      false,
    ],
  },
  "optimization": {
    "minimize": false,
    "minimizer": [
      TerserPlugin {
        "options": {
          "exclude": undefined,
          "extractComments": true,
          "include": undefined,
          "minimizer": {
            "implementation": [Function],
            "options": {},
          },
          "parallel": true,
          "test": /\\\\\\.\\[cm\\]\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
        },
      },
    ],
  },
  "output": {
    "chunkFormat": "commonjs",
    "clean": false,
    "filename": "bundle.js",
    "library": {
      "type": "commonjs",
    },
    "path": "/foo/bar/dist",
    "publicPath": "/",
  },
  "performance": {
    "hints": false,
  },
  "plugins": [
    SnapsWebpackPlugin {
      "options": {
        "eval": true,
        "manifestPath": "/foo/bar/snap.manifest.json",
        "writeManifest": true,
      },
    },
    SnapsStatsPlugin {
      "options": {
        "verbose": false,
      },
    },
    DefinePlugin {
      "definitions": {
        "process.env.DEBUG": ""false"",
        "process.env.NODE_DEBUG": ""false"",
        "process.env.NODE_ENV": ""production"",
      },
    },
    ProgressPlugin {
      "dependenciesCount": 10000,
      "handler": [Function],
      "modulesCount": 5000,
      "percentBy": undefined,
      "profile": false,
      "showActiveModules": false,
      "showDependencies": true,
      "showEntries": true,
      "showModules": true,
    },
    SnapsBundleWarningsPlugin {
      "options": {
        "buffer": true,
        "builtInResolver": SnapsBuiltInResolver {
          "options": {
            "ignore": [],
          },
          "unresolvedModules": Set {},
        },
        "builtIns": true,
      },
    },
    ProvidePlugin {
      "definitions": {
        "Buffer": [
          "buffer",
          "Buffer",
        ],
      },
    },
  ],
  "resolve": {
    "extensions": [
      ".js",
      ".mjs",
      ".cjs",
      ".ts",
    ],
    "fallback": {
      "buffer": "/foo/bar/index.js",
      "fs": false,
      "path": false,
    },
    "plugins": [
      SnapsBuiltInResolver {
        "options": {
          "ignore": [],
        },
        "unresolvedModules": Set {},
      },
    ],
  },
  "stats": "none",
  "target": "browserslist:/foo/bar/.browserslistrc",
}
`;

exports[`getDefaultConfiguration returns the default Webpack configuration for the given CLI config and options 1`] = `
{
  "devtool": false,
  "entry": "/foo/bar/src/index.ts",
  "infrastructureLogging": {
    "level": "none",
  },
  "mode": "production",
  "module": {
    "rules": [
      {
        "exclude": /node_modules/u,
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|ts\\)\\$/u,
        "use": {
          "loader": "/foo/bar/node_modules/swc-loader/index.js",
          "options": {
            "env": {
              "targets": "chrome >= 90, firefox >= 91",
            },
            "jsc": {
              "parser": {
                "syntax": "typescript",
              },
            },
            "module": {
              "type": "es6",
            },
            "sourceMaps": false,
            "sync": false,
          },
        },
      },
      {
        "resolve": {
          "fullySpecified": false,
        },
        "test": /\\\\\\.m\\?js/u,
      },
      false,
    ],
  },
  "optimization": {
    "minimize": true,
    "minimizer": [
      TerserPlugin {
        "options": {
          "exclude": undefined,
          "extractComments": true,
          "include": undefined,
          "minimizer": {
            "implementation": [Function],
            "options": {},
          },
          "parallel": true,
          "test": /\\\\\\.\\[cm\\]\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
        },
      },
    ],
  },
  "output": {
    "chunkFormat": "commonjs",
    "clean": false,
    "filename": "bundle.js",
    "library": {
      "type": "commonjs",
    },
    "path": "/bar/baz",
    "publicPath": "/",
  },
  "performance": {
    "hints": false,
  },
  "plugins": [
    SnapsWebpackPlugin {
      "options": {
        "eval": false,
        "manifestPath": "/bar/snap.manifest.json",
        "writeManifest": true,
      },
    },
    SnapsStatsPlugin {
      "options": {
        "verbose": false,
      },
    },
    DefinePlugin {
      "definitions": {
        "process.env.DEBUG": ""false"",
        "process.env.NODE_DEBUG": ""false"",
        "process.env.NODE_ENV": ""production"",
      },
    },
    ProgressPlugin {
      "dependenciesCount": 10000,
      "handler": [Function],
      "modulesCount": 5000,
      "percentBy": undefined,
      "profile": false,
      "showActiveModules": false,
      "showDependencies": true,
      "showEntries": true,
      "showModules": true,
    },
    SnapsBundleWarningsPlugin {
      "options": {
        "buffer": true,
        "builtInResolver": SnapsBuiltInResolver {
          "options": {
            "ignore": [],
          },
          "unresolvedModules": Set {},
        },
        "builtIns": true,
      },
    },
    SnapsWatchPlugin {
      "options": {
        "bundle": "/bar/baz/bundle.js",
        "evaluate": true,
        "files": [
          "/bar/snap.manifest.json",
        ],
      },
    },
  ],
  "resolve": {
    "extensions": [
      ".js",
      ".mjs",
      ".cjs",
      ".ts",
    ],
    "fallback": {
      "buffer": false,
      "fs": false,
      "path": false,
    },
    "plugins": [
      SnapsBuiltInResolver {
        "options": {
          "ignore": [],
        },
        "unresolvedModules": Set {},
      },
    ],
  },
  "stats": "none",
  "target": "browserslist:/foo/bar/.browserslistrc",
}
`;

exports[`getDefaultConfiguration returns the default Webpack configuration for the given CLI config and options 2`] = `
{
  "devtool": false,
  "entry": "/foo/bar/src/index.ts",
  "infrastructureLogging": {
    "level": "none",
  },
  "mode": "production",
  "module": {
    "rules": [
      {
        "exclude": /node_modules/u,
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|ts\\)\\$/u,
        "use": {
          "loader": "/foo/bar/node_modules/swc-loader/index.js",
          "options": {
            "env": {
              "targets": "chrome >= 90, firefox >= 91",
            },
            "jsc": {
              "parser": {
                "syntax": "typescript",
              },
            },
            "module": {
              "type": "es6",
            },
            "sourceMaps": false,
            "sync": false,
          },
        },
      },
      {
        "resolve": {
          "fullySpecified": false,
        },
        "test": /\\\\\\.m\\?js/u,
      },
      false,
    ],
  },
  "optimization": {
    "minimize": true,
    "minimizer": [
      TerserPlugin {
        "options": {
          "exclude": undefined,
          "extractComments": true,
          "include": undefined,
          "minimizer": {
            "implementation": [Function],
            "options": {},
          },
          "parallel": true,
          "test": /\\\\\\.\\[cm\\]\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
        },
      },
    ],
  },
  "output": {
    "chunkFormat": "commonjs",
    "clean": false,
    "filename": "bundle.js",
    "library": {
      "type": "commonjs",
    },
    "path": "/bar/baz",
    "publicPath": "/",
  },
  "performance": {
    "hints": false,
  },
  "plugins": [
    SnapsWebpackPlugin {
      "options": {
        "eval": false,
        "manifestPath": "/bar/snap.manifest.json",
        "writeManifest": true,
      },
    },
    SnapsStatsPlugin {
      "options": {
        "verbose": false,
      },
    },
    DefinePlugin {
      "definitions": {
        "process.env.DEBUG": ""false"",
        "process.env.NODE_DEBUG": ""false"",
        "process.env.NODE_ENV": ""production"",
      },
    },
    ProgressPlugin {
      "dependenciesCount": 10000,
      "handler": [Function],
      "modulesCount": 5000,
      "percentBy": undefined,
      "profile": false,
      "showActiveModules": false,
      "showDependencies": true,
      "showEntries": true,
      "showModules": true,
    },
    SnapsBundleWarningsPlugin {
      "options": {
        "buffer": true,
        "builtInResolver": SnapsBuiltInResolver {
          "options": {
            "ignore": [],
          },
          "unresolvedModules": Set {},
        },
        "builtIns": true,
      },
    },
  ],
  "resolve": {
    "extensions": [
      ".js",
      ".mjs",
      ".cjs",
      ".ts",
    ],
    "fallback": {
      "buffer": false,
      "fs": false,
      "path": false,
    },
    "plugins": [
      SnapsBuiltInResolver {
        "options": {
          "ignore": [],
        },
        "unresolvedModules": Set {},
      },
    ],
  },
  "stats": "none",
  "target": "browserslist:/foo/bar/.browserslistrc",
}
`;

exports[`getDefaultConfiguration returns the default Webpack configuration for the given CLI config and options 3`] = `
{
  "devtool": false,
  "entry": "/foo/bar/src/index.ts",
  "infrastructureLogging": {
    "level": "none",
  },
  "mode": "production",
  "module": {
    "rules": [
      {
        "exclude": /node_modules/u,
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|ts\\)\\$/u,
        "use": {
          "loader": "/foo/bar/node_modules/swc-loader/index.js",
          "options": {
            "env": {
              "targets": "chrome >= 90, firefox >= 91",
            },
            "jsc": {
              "parser": {
                "syntax": "typescript",
              },
            },
            "module": {
              "type": "es6",
            },
            "sourceMaps": false,
            "sync": false,
          },
        },
      },
      {
        "resolve": {
          "fullySpecified": false,
        },
        "test": /\\\\\\.m\\?js/u,
      },
      false,
    ],
  },
  "optimization": {
    "minimize": true,
    "minimizer": [
      TerserPlugin {
        "options": {
          "exclude": undefined,
          "extractComments": true,
          "include": undefined,
          "minimizer": {
            "implementation": [Function],
            "options": {},
          },
          "parallel": true,
          "test": /\\\\\\.\\[cm\\]\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
        },
      },
    ],
  },
  "output": {
    "chunkFormat": "commonjs",
    "clean": false,
    "filename": "bundle.js",
    "library": {
      "type": "commonjs",
    },
    "path": "/bar/baz",
    "publicPath": "/",
  },
  "performance": {
    "hints": false,
  },
  "plugins": [
    SnapsWebpackPlugin {
      "options": {
        "eval": true,
        "manifestPath": "/bar/snap.manifest.json",
        "writeManifest": true,
      },
    },
    SnapsStatsPlugin {
      "options": {
        "verbose": false,
      },
    },
    DefinePlugin {
      "definitions": {
        "process.env.DEBUG": ""false"",
        "process.env.NODE_DEBUG": ""false"",
        "process.env.NODE_ENV": ""production"",
      },
    },
    ProgressPlugin {
      "dependenciesCount": 10000,
      "handler": [Function],
      "modulesCount": 5000,
      "percentBy": undefined,
      "profile": false,
      "showActiveModules": false,
      "showDependencies": true,
      "showEntries": true,
      "showModules": true,
    },
    SnapsBundleWarningsPlugin {
      "options": {
        "buffer": true,
        "builtInResolver": SnapsBuiltInResolver {
          "options": {
            "ignore": [],
          },
          "unresolvedModules": Set {},
        },
        "builtIns": true,
      },
    },
  ],
  "resolve": {
    "extensions": [
      ".js",
      ".mjs",
      ".cjs",
      ".ts",
    ],
    "fallback": {
      "buffer": false,
      "fs": false,
      "path": false,
    },
    "plugins": [
      SnapsBuiltInResolver {
        "options": {
          "ignore": [],
        },
        "unresolvedModules": Set {},
      },
    ],
  },
  "stats": "none",
  "target": "browserslist:/foo/bar/.browserslistrc",
}
`;

exports[`getDefaultConfiguration returns the default Webpack configuration for the given CLI config and options 4`] = `
{
  "devtool": false,
  "entry": "/foo/bar/src/index.ts",
  "infrastructureLogging": {
    "level": "none",
  },
  "mode": "production",
  "module": {
    "rules": [
      {
        "exclude": /node_modules/u,
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|ts\\)\\$/u,
        "use": {
          "loader": "/foo/bar/node_modules/swc-loader/index.js",
          "options": {
            "env": {
              "targets": "chrome >= 90, firefox >= 91",
            },
            "jsc": {
              "parser": {
                "syntax": "typescript",
              },
            },
            "module": {
              "type": "es6",
            },
            "sourceMaps": false,
            "sync": false,
          },
        },
      },
      {
        "resolve": {
          "fullySpecified": false,
        },
        "test": /\\\\\\.m\\?js/u,
      },
      false,
    ],
  },
  "optimization": {
    "minimize": true,
    "minimizer": [
      TerserPlugin {
        "options": {
          "exclude": undefined,
          "extractComments": true,
          "include": undefined,
          "minimizer": {
            "implementation": [Function],
            "options": {},
          },
          "parallel": true,
          "test": /\\\\\\.\\[cm\\]\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
        },
      },
    ],
  },
  "output": {
    "chunkFormat": "commonjs",
    "clean": false,
    "filename": "bundle.js",
    "library": {
      "type": "commonjs",
    },
    "path": "/bar/baz",
    "publicPath": "/",
  },
  "performance": {
    "hints": false,
  },
  "plugins": [
    SnapsWebpackPlugin {
      "options": {
        "eval": false,
        "manifestPath": "/bar/snap.manifest.json",
        "writeManifest": true,
      },
    },
    SnapsStatsPlugin {
      "options": {
        "verbose": false,
      },
    },
    DefinePlugin {
      "definitions": {
        "process.env.DEBUG": ""false"",
        "process.env.NODE_DEBUG": ""false"",
        "process.env.NODE_ENV": ""production"",
      },
    },
    ProgressPlugin {
      "dependenciesCount": 10000,
      "handler": [Function],
      "modulesCount": 5000,
      "percentBy": undefined,
      "profile": false,
      "showActiveModules": false,
      "showDependencies": true,
      "showEntries": true,
      "showModules": true,
    },
    SnapsBundleWarningsPlugin {
      "options": {
        "buffer": true,
        "builtInResolver": SnapsBuiltInResolver {
          "options": {
            "ignore": [],
          },
          "unresolvedModules": Set {},
        },
        "builtIns": true,
      },
    },
    SnapsWatchPlugin {
      "options": {
        "bundle": "/bar/baz/bundle.js",
        "evaluate": false,
        "files": [
          "/bar/snap.manifest.json",
        ],
      },
    },
  ],
  "resolve": {
    "extensions": [
      ".js",
      ".mjs",
      ".cjs",
      ".ts",
    ],
    "fallback": {
      "buffer": false,
      "fs": false,
      "path": false,
    },
    "plugins": [
      SnapsBuiltInResolver {
        "options": {
          "ignore": [],
        },
        "unresolvedModules": Set {},
      },
    ],
  },
  "stats": "none",
  "target": "browserslist:/foo/bar/.browserslistrc",
}
`;

exports[`getDefaultConfiguration returns the default Webpack configuration for the given CLI config and options 5`] = `
{
  "devtool": false,
  "entry": "/foo/bar/src/index.ts",
  "infrastructureLogging": {
    "level": "none",
  },
  "mode": "production",
  "module": {
    "rules": [
      {
        "exclude": /node_modules/u,
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|ts\\)\\$/u,
        "use": {
          "loader": "/foo/bar/node_modules/swc-loader/index.js",
          "options": {
            "env": {
              "targets": "chrome >= 90, firefox >= 91",
            },
            "jsc": {
              "parser": {
                "syntax": "typescript",
              },
            },
            "module": {
              "type": "es6",
            },
            "sourceMaps": false,
            "sync": false,
          },
        },
      },
      {
        "resolve": {
          "fullySpecified": false,
        },
        "test": /\\\\\\.m\\?js/u,
      },
      false,
    ],
  },
  "optimization": {
    "minimize": true,
    "minimizer": [
      TerserPlugin {
        "options": {
          "exclude": undefined,
          "extractComments": true,
          "include": undefined,
          "minimizer": {
            "implementation": [Function],
            "options": {},
          },
          "parallel": true,
          "test": /\\\\\\.\\[cm\\]\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
        },
      },
    ],
  },
  "output": {
    "chunkFormat": "commonjs",
    "clean": false,
    "filename": "bundle.js",
    "library": {
      "type": "commonjs",
    },
    "path": "/bar/baz",
    "publicPath": "/",
  },
  "performance": {
    "hints": false,
  },
  "plugins": [
    SnapsWebpackPlugin {
      "options": {
        "eval": false,
        "manifestPath": "/bar/snap.manifest.json",
        "writeManifest": true,
      },
    },
    SnapsStatsPlugin {
      "options": {
        "verbose": false,
      },
    },
    DefinePlugin {
      "definitions": {
        "process.env.DEBUG": ""false"",
        "process.env.NODE_DEBUG": ""false"",
        "process.env.NODE_ENV": ""production"",
      },
    },
    ProgressPlugin {
      "dependenciesCount": 10000,
      "handler": [Function],
      "modulesCount": 5000,
      "percentBy": undefined,
      "profile": false,
      "showActiveModules": false,
      "showDependencies": true,
      "showEntries": true,
      "showModules": true,
    },
    SnapsBundleWarningsPlugin {
      "options": {
        "buffer": true,
        "builtInResolver": SnapsBuiltInResolver {
          "options": {
            "ignore": [],
          },
          "unresolvedModules": Set {},
        },
        "builtIns": true,
      },
    },
    SnapsWatchPlugin {
      "options": {
        "bundle": "/bar/baz/bundle.js",
        "evaluate": true,
        "files": [
          "/bar/snap.manifest.json",
        ],
      },
    },
  ],
  "resolve": {
    "extensions": [
      ".js",
      ".mjs",
      ".cjs",
      ".ts",
    ],
    "fallback": {
      "buffer": false,
      "fs": false,
      "path": false,
    },
    "plugins": [
      SnapsBuiltInResolver {
        "options": {
          "ignore": [],
        },
        "unresolvedModules": Set {},
      },
    ],
  },
  "stats": "none",
  "target": "browserslist:/foo/bar/.browserslistrc",
}
`;

exports[`getDefaultConfiguration returns the default Webpack configuration for the given legacy CLI config 1`] = `
{
  "devtool": false,
  "entry": "/foo/bar/src/index.js",
  "infrastructureLogging": {
    "level": "none",
  },
  "mode": "production",
  "module": {
    "rules": [
      {
        "exclude": /node_modules/u,
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|ts\\)\\$/u,
        "use": {
          "loader": "/foo/bar/src/webpack/loaders/function.ts",
          "options": {
            "bundlerCustomizer": undefined,
            "depsToTranspile": [],
            "dist": "/foo/bar/dist",
            "eval": true,
            "fn": [Function],
            "manifest": true,
            "outfileName": "bundle.js",
            "port": 8081,
            "root": "/foo/bar",
            "serve": true,
            "sourceMaps": false,
            "src": "/foo/bar/src/index.js",
            "stripComments": true,
            "suppressWarnings": false,
            "transpilationMode": "localOnly",
            "verboseErrors": true,
            "writeManifest": true,
          },
        },
      },
      {
        "resolve": {
          "fullySpecified": false,
        },
        "test": /\\\\\\.m\\?js/u,
      },
      false,
    ],
  },
  "optimization": {
    "minimize": true,
    "minimizer": [
      TerserPlugin {
        "options": {
          "exclude": undefined,
          "extractComments": true,
          "include": undefined,
          "minimizer": {
            "implementation": [Function],
            "options": {},
          },
          "parallel": true,
          "test": /\\\\\\.\\[cm\\]\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
        },
      },
    ],
  },
  "output": {
    "chunkFormat": "commonjs",
    "clean": false,
    "filename": "bundle.js",
    "library": {
      "type": "commonjs",
    },
    "path": "/foo/bar/dist",
    "publicPath": "/",
  },
  "performance": {
    "hints": false,
  },
  "plugins": [
    SnapsWebpackPlugin {
      "options": {
        "eval": true,
        "manifestPath": "/foo/bar/snap.manifest.json",
        "writeManifest": true,
      },
    },
    SnapsStatsPlugin {
      "options": {
        "verbose": false,
      },
    },
    DefinePlugin {
      "definitions": {
        "process.env.DEBUG": ""false"",
        "process.env.NODE_DEBUG": ""false"",
        "process.env.NODE_ENV": ""production"",
      },
    },
    ProgressPlugin {
      "dependenciesCount": 10000,
      "handler": [Function],
      "modulesCount": 5000,
      "percentBy": undefined,
      "profile": false,
      "showActiveModules": false,
      "showDependencies": true,
      "showEntries": true,
      "showModules": true,
    },
    SnapsBundleWarningsPlugin {
      "options": {
        "buffer": false,
        "builtInResolver": false,
        "builtIns": false,
      },
    },
  ],
  "resolve": {
    "extensions": [
      ".js",
      ".mjs",
      ".cjs",
      ".ts",
    ],
    "fallback": {
      "buffer": false,
      "fs": false,
      "path": false,
    },
    "plugins": [
      false,
    ],
  },
  "stats": "none",
  "target": "browserslist:/foo/bar/.browserslistrc",
}
`;

exports[`getDefaultConfiguration returns the default Webpack configuration for the given legacy CLI config 2`] = `
{
  "devtool": false,
  "entry": "/foo/bar/src/index.ts",
  "infrastructureLogging": {
    "level": "none",
  },
  "mode": "production",
  "module": {
    "rules": [
      {
        "exclude": /node_modules/u,
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|ts\\)\\$/u,
        "use": {
          "loader": "/foo/bar/src/webpack/loaders/function.ts",
          "options": {
            "bundlerCustomizer": undefined,
            "depsToTranspile": [],
            "dist": "/foo/bar/dist",
            "eval": true,
            "fn": [Function],
            "manifest": true,
            "outfileName": "bundle.js",
            "port": 8081,
            "root": "/foo/bar",
            "serve": true,
            "sourceMaps": false,
            "src": "/foo/bar/src/index.ts",
            "stripComments": true,
            "suppressWarnings": false,
            "transpilationMode": "localOnly",
            "verboseErrors": true,
            "writeManifest": true,
          },
        },
      },
      {
        "resolve": {
          "fullySpecified": false,
        },
        "test": /\\\\\\.m\\?js/u,
      },
      false,
    ],
  },
  "optimization": {
    "minimize": true,
    "minimizer": [
      TerserPlugin {
        "options": {
          "exclude": undefined,
          "extractComments": true,
          "include": undefined,
          "minimizer": {
            "implementation": [Function],
            "options": {},
          },
          "parallel": true,
          "test": /\\\\\\.\\[cm\\]\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
        },
      },
    ],
  },
  "output": {
    "chunkFormat": "commonjs",
    "clean": false,
    "filename": "bundle.js",
    "library": {
      "type": "commonjs",
    },
    "path": "/foo/bar/dist",
    "publicPath": "/",
  },
  "performance": {
    "hints": false,
  },
  "plugins": [
    SnapsWebpackPlugin {
      "options": {
        "eval": true,
        "manifestPath": "/foo/bar/snap.manifest.json",
        "writeManifest": true,
      },
    },
    SnapsStatsPlugin {
      "options": {
        "verbose": false,
      },
    },
    DefinePlugin {
      "definitions": {
        "process.env.DEBUG": ""false"",
        "process.env.NODE_DEBUG": ""false"",
        "process.env.NODE_ENV": ""production"",
      },
    },
    ProgressPlugin {
      "dependenciesCount": 10000,
      "handler": [Function],
      "modulesCount": 5000,
      "percentBy": undefined,
      "profile": false,
      "showActiveModules": false,
      "showDependencies": true,
      "showEntries": true,
      "showModules": true,
    },
    SnapsBundleWarningsPlugin {
      "options": {
        "buffer": false,
        "builtInResolver": false,
        "builtIns": false,
      },
    },
  ],
  "resolve": {
    "extensions": [
      ".js",
      ".mjs",
      ".cjs",
      ".ts",
    ],
    "fallback": {
      "buffer": false,
      "fs": false,
      "path": false,
    },
    "plugins": [
      false,
    ],
  },
  "stats": "none",
  "target": "browserslist:/foo/bar/.browserslistrc",
}
`;

exports[`getDefaultConfiguration returns the default Webpack configuration for the given legacy CLI config 3`] = `
{
  "devtool": false,
  "entry": "/foo/bar/src/index.ts",
  "infrastructureLogging": {
    "level": "none",
  },
  "mode": "production",
  "module": {
    "rules": [
      {
        "exclude": /node_modules/u,
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|ts\\)\\$/u,
        "use": {
          "loader": "/foo/bar/src/webpack/loaders/function.ts",
          "options": {
            "bundlerCustomizer": undefined,
            "depsToTranspile": [],
            "dist": "/foo/bar/dist",
            "eval": true,
            "fn": [Function],
            "manifest": true,
            "outfileName": "bundle.js",
            "port": 8081,
            "root": "/foo/bar",
            "serve": true,
            "sourceMaps": false,
            "src": "/foo/bar/src/index.ts",
            "stripComments": false,
            "suppressWarnings": false,
            "transpilationMode": "localOnly",
            "verboseErrors": true,
            "writeManifest": true,
          },
        },
      },
      {
        "resolve": {
          "fullySpecified": false,
        },
        "test": /\\\\\\.m\\?js/u,
      },
      false,
    ],
  },
  "optimization": {
    "minimize": false,
    "minimizer": [
      TerserPlugin {
        "options": {
          "exclude": undefined,
          "extractComments": true,
          "include": undefined,
          "minimizer": {
            "implementation": [Function],
            "options": {},
          },
          "parallel": true,
          "test": /\\\\\\.\\[cm\\]\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
        },
      },
    ],
  },
  "output": {
    "chunkFormat": "commonjs",
    "clean": false,
    "filename": "bundle.js",
    "library": {
      "type": "commonjs",
    },
    "path": "/foo/bar/dist",
    "publicPath": "/",
  },
  "performance": {
    "hints": false,
  },
  "plugins": [
    SnapsWebpackPlugin {
      "options": {
        "eval": true,
        "manifestPath": "/foo/bar/snap.manifest.json",
        "writeManifest": true,
      },
    },
    SnapsStatsPlugin {
      "options": {
        "verbose": false,
      },
    },
    DefinePlugin {
      "definitions": {
        "process.env.DEBUG": ""false"",
        "process.env.NODE_DEBUG": ""false"",
        "process.env.NODE_ENV": ""production"",
      },
    },
    ProgressPlugin {
      "dependenciesCount": 10000,
      "handler": [Function],
      "modulesCount": 5000,
      "percentBy": undefined,
      "profile": false,
      "showActiveModules": false,
      "showDependencies": true,
      "showEntries": true,
      "showModules": true,
    },
    SnapsBundleWarningsPlugin {
      "options": {
        "buffer": false,
        "builtInResolver": false,
        "builtIns": false,
      },
    },
  ],
  "resolve": {
    "extensions": [
      ".js",
      ".mjs",
      ".cjs",
      ".ts",
    ],
    "fallback": {
      "buffer": false,
      "fs": false,
      "path": false,
    },
    "plugins": [
      false,
    ],
  },
  "stats": "none",
  "target": "browserslist:/foo/bar/.browserslistrc",
}
`;
